--- a/data/Datas.ipynb
+++ b/data/Datas.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,7 +26,7 @@
       "source": [
         "def haversine_distance(lat1, lon1, lat2, lon2, r=6371):\n",
         "    coordinates = lat1, lon1, lat2, lon2\n",
-        "    phi1, lambda1, phi2, lambda2 = [\n",
+        "    phi1, lambda1, phi2 , lambda2 = [\n",
         "        math.radians(c) for c in coordinates\n",
         "    ]  \n",
         "    a = (np.square(math.sin((phi2-phi1)/2)) + math.cos(phi1) * math.cos(phi2) * \n",
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -520,7 +520,7 @@
               "43        KIEV  50.4334  30.5166"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -531,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1169,7 +1169,7 @@
               "790      LONDON          United Kingdom  STN          Europe  51.5072  -0.1275"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1180,7 +1180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1211,10 +1211,10 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Origin</th>\n",
               "      <th>Source airport</th>\n",
-              "      <th>Destination</th>\n",
+              "      <th>Origin</th>\n",
               "      <th>Destination airport</th>\n",
+              "      <th>Destination</th>\n",
               "      <th>lat_st</th>\n",
               "      <th>lng_st</th>\n",
               "      <th>lat_end</th>\n",
@@ -1225,10 +1225,10 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>139</th>\n",
-              "      <td>STOCKHOLM</td>\n",
               "      <td>ARN</td>\n",
-              "      <td>OSLO</td>\n",
+              "      <td>STOCKHOLM</td>\n",
               "      <td>TRF</td>\n",
+              "      <td>OSLO</td>\n",
               "      <td>59.3508</td>\n",
               "      <td>18.0973</td>\n",
               "      <td>59.9167</td>\n",
@@ -1237,10 +1237,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>164</th>\n",
-              "      <td>OSLO</td>\n",
               "      <td>TRF</td>\n",
-              "      <td>STOCKHOLM</td>\n",
+              "      <td>OSLO</td>\n",
               "      <td>ARN</td>\n",
+              "      <td>STOCKHOLM</td>\n",
               "      <td>59.9167</td>\n",
               "      <td>10.7500</td>\n",
               "      <td>59.3508</td>\n",
@@ -1249,10 +1249,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1406</th>\n",
-              "      <td>ROME</td>\n",
               "      <td>FCO</td>\n",
-              "      <td>BERLIN</td>\n",
+              "      <td>ROME</td>\n",
               "      <td>TXL</td>\n",
+              "      <td>BERLIN</td>\n",
               "      <td>41.8960</td>\n",
               "      <td>12.4833</td>\n",
               "      <td>52.5218</td>\n",
@@ -1261,10 +1261,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1503</th>\n",
-              "      <td>LONDON</td>\n",
               "      <td>LHR</td>\n",
-              "      <td>BERLIN</td>\n",
+              "      <td>LONDON</td>\n",
               "      <td>TXL</td>\n",
+              "      <td>BERLIN</td>\n",
               "      <td>51.5072</td>\n",
               "      <td>-0.1275</td>\n",
               "      <td>52.5218</td>\n",
@@ -1273,10 +1273,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1571</th>\n",
-              "      <td>SARAJEVO</td>\n",
               "      <td>SJJ</td>\n",
-              "      <td>BERLIN</td>\n",
+              "      <td>SARAJEVO</td>\n",
               "      <td>TXL</td>\n",
+              "      <td>BERLIN</td>\n",
               "      <td>43.8500</td>\n",
               "      <td>18.3830</td>\n",
               "      <td>52.5218</td>\n",
@@ -1297,10 +1297,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>66511</th>\n",
-              "      <td>LONDON</td>\n",
               "      <td>LGW</td>\n",
-              "      <td>SOFIA</td>\n",
+              "      <td>LONDON</td>\n",
               "      <td>TFS</td>\n",
+              "      <td>SOFIA</td>\n",
               "      <td>51.5072</td>\n",
               "      <td>-0.1275</td>\n",
               "      <td>42.6833</td>\n",
@@ -1309,10 +1309,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>66523</th>\n",
-              "      <td>LONDON</td>\n",
               "      <td>LTN</td>\n",
-              "      <td>ROME</td>\n",
+              "      <td>LONDON</td>\n",
               "      <td>FCO</td>\n",
+              "      <td>ROME</td>\n",
               "      <td>51.5072</td>\n",
               "      <td>-0.1275</td>\n",
               "      <td>41.8960</td>\n",
@@ -1321,10 +1321,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>66530</th>\n",
-              "      <td>LONDON</td>\n",
               "      <td>LTN</td>\n",
-              "      <td>SOFIA</td>\n",
+              "      <td>LONDON</td>\n",
               "      <td>TFS</td>\n",
+              "      <td>SOFIA</td>\n",
               "      <td>51.5072</td>\n",
               "      <td>-0.1275</td>\n",
               "      <td>42.6833</td>\n",
@@ -1333,10 +1333,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>66585</th>\n",
-              "      <td>SOFIA</td>\n",
               "      <td>TFS</td>\n",
-              "      <td>LONDON</td>\n",
+              "      <td>SOFIA</td>\n",
               "      <td>LGW</td>\n",
+              "      <td>LONDON</td>\n",
               "      <td>42.6833</td>\n",
               "      <td>23.3167</td>\n",
               "      <td>51.5072</td>\n",
@@ -1345,10 +1345,10 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>66586</th>\n",
-              "      <td>SOFIA</td>\n",
               "      <td>TFS</td>\n",
-              "      <td>LONDON</td>\n",
+              "      <td>SOFIA</td>\n",
               "      <td>LTN</td>\n",
+              "      <td>LONDON</td>\n",
               "      <td>42.6833</td>\n",
               "      <td>23.3167</td>\n",
               "      <td>51.5072</td>\n",
@@ -1361,18 +1361,18 @@
               "</div>"
             ],
             "text/plain": [
-              "          Origin Source airport Destination Destination airport   lat_st  \\\n",
-              "139    STOCKHOLM            ARN        OSLO                 TRF  59.3508   \n",
-              "164         OSLO            TRF   STOCKHOLM                 ARN  59.9167   \n",
-              "1406        ROME            FCO      BERLIN                 TXL  41.8960   \n",
-              "1503      LONDON            LHR      BERLIN                 TXL  51.5072   \n",
-              "1571    SARAJEVO            SJJ      BERLIN                 TXL  43.8500   \n",
-              "...          ...            ...         ...                 ...      ...   \n",
-              "66511     LONDON            LGW       SOFIA                 TFS  51.5072   \n",
-              "66523     LONDON            LTN        ROME                 FCO  51.5072   \n",
-              "66530     LONDON            LTN       SOFIA                 TFS  51.5072   \n",
-              "66585      SOFIA            TFS      LONDON                 LGW  42.6833   \n",
-              "66586      SOFIA            TFS      LONDON                 LTN  42.6833   \n",
+              "      Source airport     Origin Destination airport Destination   lat_st  \\\n",
+              "139              ARN  STOCKHOLM                 TRF        OSLO  59.3508   \n",
+              "164              TRF       OSLO                 ARN   STOCKHOLM  59.9167   \n",
+              "1406             FCO       ROME                 TXL      BERLIN  41.8960   \n",
+              "1503             LHR     LONDON                 TXL      BERLIN  51.5072   \n",
+              "1571             SJJ   SARAJEVO                 TXL      BERLIN  43.8500   \n",
+              "...              ...        ...                 ...         ...      ...   \n",
+              "66511            LGW     LONDON                 TFS       SOFIA  51.5072   \n",
+              "66523            LTN     LONDON                 FCO        ROME  51.5072   \n",
+              "66530            LTN     LONDON                 TFS       SOFIA  51.5072   \n",
+              "66585            TFS      SOFIA                 LGW      LONDON  42.6833   \n",
+              "66586            TFS      SOFIA                 LTN      LONDON  42.6833   \n",
               "\n",
               "        lng_st  lat_end  lng_end     distance  \n",
               "139    18.0973  59.9167  10.7500   417.547216  \n",
@@ -1390,31 +1390,23 @@
               "[1611 rows x 9 columns]"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "flights=flights[['Origin','Source airport','Destination','Destination airport',\"lat_st\",\"lng_st\",\"lat_end\",\"lng_end\",\"distance\"]]\n",
+        "flights=flights[['Source airport','Origin','Destination airport','Destination',\"lat_st\",\"lng_st\",\"lat_end\",\"lng_end\",\"distance\"]]\n",
         "flights"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 42,
       "metadata": {
         "id": "JqQRxQH1OOOk"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "El archivo data.csv ya existe.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "file_name = 'data.csv'\n",
         "\n",
