creacion del grafo

--- a/data/Datas.ipynb
+++ b/data/Datas.ipynb
@@ -76,43 +76,43 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:15: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:15: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  flights['lat_st'] = cordsdf['lat_st'].values\n",
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:16: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:16: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  flights['lng_st'] = cordsdf['lng_st'].values\n",
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:17: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:17: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  flights['lat_end'] = cordsdf['lat_end'].values\n",
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:18: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:18: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  flights['lng_end'] = cordsdf['lng_end'].values\n",
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:21: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:21: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  flights['distance'] = flights.apply(lambda row : haversine_distance(row['lat_st'],\n",
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:40: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:40: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  flights['Origin'] = vecdf['start'].values\n",
-            "/var/folders/4x/by41vdp921s318y3mybq7fb80000gn/T/ipykernel_45235/1571547663.py:41: SettingWithCopyWarning: \n",
+            "C:\\Users\\K-Zhu\\AppData\\Local\\Temp\\ipykernel_5584\\1571547663.py:41: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -929,7 +929,15 @@
       "metadata": {
         "id": "JqQRxQH1OOOk"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El archivo data.csv ya existe.\n"
+          ]
+        }
+      ],
       "source": [
         "file_name = 'data.csv'\n",
         "\n",
